# backend/internal/api/oas_response_encoders_gen.go
@@ -9,14 +9,11 @@ import (
 	"github.com/go-faster/errors"
 	"github.com/go-faster/jx"
 	ht "github.com/ogen-go/ogen/http"
-	"go.opentelemetry.io/otel/codes"
-	"go.opentelemetry.io/otel/trace"
 )
 
-func encodeCreateMessageResponse(response *Message, w http.ResponseWriter, span trace.Span) error {
+func encodeCreateMessageResponse(response *Message, w http.ResponseWriter) error {
 	w.Header().Set("Content-Type", "application/json; charset=utf-8")
 	w.WriteHeader(201)
-	span.SetStatus(codes.Ok, http.StatusText(201))
 
 	e := new(jx.Encoder)
 	response.Encode(e)
@@ -27,10 +24,17 @@ func encodeCreateMessageResponse(response *Message, w http.ResponseWriter, span 
 	return nil
 }
 
-func encodeCreateSwapIntentResponse(response *SwapIntentResponse, w http.ResponseWriter, span trace.Span) error {
+func encodeDeleteMyDirectionalIntentResponse(response *DirectionalIntentResponse, w http.ResponseWriter) error {
+	if err := func() error {
+		if err := response.Validate(); err != nil {
+			return err
+		}
+		return nil
+	}(); err != nil {
+		return errors.Wrap(err, "validate")
+	}
 	w.Header().Set("Content-Type", "application/json; charset=utf-8")
 	w.WriteHeader(200)
-	span.SetStatus(codes.Ok, http.StatusText(200))
 
 	e := new(jx.Encoder)
 	response.Encode(e)
@@ -41,10 +45,9 @@ func encodeCreateSwapIntentResponse(response *SwapIntentResponse, w http.Respons
 	return nil
 }
 
-func encodeDeleteMyDirectionalIntentResponse(response *DirectionalIntentResponse, w http.ResponseWriter, span trace.Span) error {
+func encodeDeleteSwapIntentResponse(response *DeleteSwapIntentResponse, w http.ResponseWriter) error {
 	w.Header().Set("Content-Type", "application/json; charset=utf-8")
 	w.WriteHeader(200)
-	span.SetStatus(codes.Ok, http.StatusText(200))
 
 	e := new(jx.Encoder)
 	response.Encode(e)
@@ -55,24 +58,17 @@ func encodeDeleteMyDirectionalIntentResponse(response *DirectionalIntentResponse
 	return nil
 }
 
-func encodeDeleteSwapIntentResponse(response *DeleteSwapIntentResponse, w http.ResponseWriter, span trace.Span) error {
-	w.Header().Set("Content-Type", "application/json; charset=utf-8")
-	w.WriteHeader(200)
-	span.SetStatus(codes.Ok, http.StatusText(200))
-
-	e := new(jx.Encoder)
-	response.Encode(e)
-	if _, err := e.WriteTo(w); err != nil {
-		return errors.Wrap(err, "write")
+func encodeGetMessagesResponse(response []Message, w http.ResponseWriter) error {
+	if err := func() error {
+		if response == nil {
+			return errors.New("nil is invalid value")
+		}
+		return nil
+	}(); err != nil {
+		return errors.Wrap(err, "validate")
 	}
-
-	return nil
-}
-
-func encodeGetMessagesResponse(response []Message, w http.ResponseWriter, span trace.Span) error {
 	w.Header().Set("Content-Type", "application/json; charset=utf-8")
 	w.WriteHeader(200)
-	span.SetStatus(codes.Ok, http.StatusText(200))
 
 	e := new(jx.Encoder)
 	e.ArrStart()
@@ -87,10 +83,17 @@ func encodeGetMessagesResponse(response []Message, w http.ResponseWriter, span t
 	return nil
 }
 
-func encodeGetRoomResponse(response *RoomStateResponse, w http.ResponseWriter, span trace.Span) error {
+func encodeGetRoomResponse(response *RoomStateResponse, w http.ResponseWriter) error {
+	if err := func() error {
+		if err := response.Validate(); err != nil {
+			return err
+		}
+		return nil
+	}(); err != nil {
+		return errors.Wrap(err, "validate")
+	}
 	w.Header().Set("Content-Type", "application/json; charset=utf-8")
 	w.WriteHeader(200)
-	span.SetStatus(codes.Ok, http.StatusText(200))
 
 	e := new(jx.Encoder)
 	response.Encode(e)
@@ -101,10 +104,9 @@ func encodeGetRoomResponse(response *RoomStateResponse, w http.ResponseWriter, s
 	return nil
 }
 
-func encodeJoinRoomResponse(response *JoinRoomResponse, w http.ResponseWriter, span trace.Span) error {
+func encodeJoinRoomResponse(response *JoinRoomResponse, w http.ResponseWriter) error {
 	w.Header().Set("Content-Type", "application/json; charset=utf-8")
 	w.WriteHeader(202)
-	span.SetStatus(codes.Ok, http.StatusText(202))
 
 	e := new(jx.Encoder)
 	response.Encode(e)
@@ -115,10 +117,17 @@ func encodeJoinRoomResponse(response *JoinRoomResponse, w http.ResponseWriter, s
 	return nil
 }
 
-func encodePatchMyDirectionalIntentResponse(response *DirectionalIntentResponse, w http.ResponseWriter, span trace.Span) error {
+func encodePatchMyDirectionalIntentResponse(response *DirectionalIntentResponse, w http.ResponseWriter) error {
+	if err := func() error {
+		if err := response.Validate(); err != nil {
+			return err
+		}
+		return nil
+	}(); err != nil {
+		return errors.Wrap(err, "validate")
+	}
 	w.Header().Set("Content-Type", "application/json; charset=utf-8")
 	w.WriteHeader(200)
-	span.SetStatus(codes.Ok, http.StatusText(200))
 
 	e := new(jx.Encoder)
 	response.Encode(e)
@@ -129,10 +138,9 @@ func encodePatchMyDirectionalIntentResponse(response *DirectionalIntentResponse,
 	return nil
 }
 
-func encodePingResponse(response PingOK, w http.ResponseWriter, span trace.Span) error {
+func encodePingResponse(response PingOK, w http.ResponseWriter) error {
 	w.Header().Set("Content-Type", "text/plain; charset=utf-8")
 	w.WriteHeader(200)
-	span.SetStatus(codes.Ok, http.StatusText(200))
 
 	writer := w
 	if closer, ok := response.Data.(io.Closer); ok {
@@ -145,10 +153,30 @@ func encodePingResponse(response PingOK, w http.ResponseWriter, span trace.Span)
 	return nil
 }
 
-func encodeSubscribeRoomStreamResponse(response SubscribeRoomStreamOK, w http.ResponseWriter, span trace.Span) error {
+func encodePutConnectionResponse(response *ConnectionResponse, w http.ResponseWriter) error {
+	if err := func() error {
+		if err := response.Validate(); err != nil {
+			return err
+		}
+		return nil
+	}(); err != nil {
+		return errors.Wrap(err, "validate")
+	}
+	w.Header().Set("Content-Type", "application/json; charset=utf-8")
+	w.WriteHeader(200)
+
+	e := new(jx.Encoder)
+	response.Encode(e)
+	if _, err := e.WriteTo(w); err != nil {
+		return errors.Wrap(err, "write")
+	}
+
+	return nil
+}
+
+func encodeSubscribeRoomStreamResponse(response SubscribeRoomStreamOK, w http.ResponseWriter) error {
 	w.Header().Set("Content-Type", "text/event-stream")
 	w.WriteHeader(200)
-	span.SetStatus(codes.Ok, http.StatusText(200))
 
 	writer := w
 	if closer, ok := response.Data.(io.Closer); ok {
@@ -161,7 +189,7 @@ func encodeSubscribeRoomStreamResponse(response SubscribeRoomStreamOK, w http.Re
 	return nil
 }
 
-func encodeErrorResponse(response *ErrorStatusCode, w http.ResponseWriter, span trace.Span) error {
+func encodeErrorResponse(response *ErrorStatusCode, w http.ResponseWriter) error {
 	w.Header().Set("Content-Type", "application/json; charset=utf-8")
 	code := response.StatusCode
 	if code == 0 {
@@ -169,11 +197,6 @@ func encodeErrorResponse(response *ErrorStatusCode, w http.ResponseWriter, span 
 		code = http.StatusOK
 	}
 	w.WriteHeader(code)
-	if st := http.StatusText(code); code >= http.StatusBadRequest {
-		span.SetStatus(codes.Error, st)
-	} else {
-		span.SetStatus(codes.Ok, st)
-	}
 
 	e := new(jx.Encoder)
 	response.Response.Encode(e)
